# system-monitor-agent-rs

./: Cargo.toml
src/: amd_cpus.rs  api.rs  main.rs  networking.rs  system.rs
src/system/: networking.rs  processor.rs
