[package]
name = "system-monitor-agent-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "^0.3"
machine-uid = "0.2.0"
procstat = "1.0.4"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"